<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?graphHeaderIcon"
            android:elevation="4dp"
            android:theme="@style/ToolbarThemeWhite"
            app:contentInsetRight="16dp"
            app:contentInsetEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
<!-- android:background="@drawable/graph_header" -->

            <android.support.constraint.ConstraintLayout
                android:id="@+id/autocompleteSearchLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/autocompleteLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/dialog_curve_shape"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/searchDismissImg"
                    app:layout_constraintTop_toTopOf="parent">

                    <fragment
                        android:id="@+id/autocomplete_fragment"
                        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                        android:layout_width="match_parent"
                        android:layout_height="30dp" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/searchDismissImg"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_btn_x"
                    app:layout_constraintStart_toEndOf="@id/autocompleteLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:id="@+id/main_screen"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_toolbar">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?graphMainbgFixedIcon"/>
<!-- android:background="@drawable/graph_mainbg_fixed" -->
            <TextView
                android:id="@+id/searchLocationTv"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="-50dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/ic_dialog_searchbar"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="60dp"
                android:text="@string/where_do_you_want_to_go"
                android:textStyle="italic" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/tripDisplayLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/test1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/current_trip"

                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <!-- android:textColor="@color/colorBlue" -->
                    <!--

                    Put here layout for current trip from My Trip screen

                    -->

                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/favoritesTitleLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tripDisplayLayout">

                    <TextView
                        android:id="@+id/favoritesTv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:text="@string/favorites"
                        android:textStyle="bold"
                        android:textSize="?textLarge"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/favoritesAdd"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintHorizontal_weight="0.8"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <!--android:textColor="@color/colorBlue"-->

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/favoritesAdd"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        app:layout_constraintStart_toEndOf="@id/favoritesTv"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintHorizontal_weight="0.2">

                        <ImageView
                            android:id="@+id/favoritesAddIcon"
                            android:layout_width="?favoritesAddIconDimension"
                            android:layout_height="?favoritesAddIconDimension"
                            android:contentDescription="@string/add_favorite_location"
                            android:background="?dialogAddIcon"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </android.support.constraint.ConstraintLayout>

                </android.support.constraint.ConstraintLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/favoritesRv"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/favoritesTitleLayout">

                </android.support.v7.widget.RecyclerView>

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>
<!--
        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_toolbar"
            app:layout_constraintBottom_toBottomOf="parent"/>
-->
    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/nav_header"/>

</android.support.v4.widget.DrawerLayout>